--- a/applied.html
+++ b/applied.html
@@ -24,6 +24,7 @@
             <th>Job applied</th>
             <th>Salary expected</th>
             <th>Add to bookmark</th>
+            <!-- <th>Add to bookmark</th> //add somthing -->
           </tr>
         </thead>
         <tbody id="body">
