--- a/bookmark.html
+++ b/bookmark.html
@@ -36,7 +36,7 @@
    var bookMarkArr = []
 
    function displayData(data){
-     
+    // <!-- <th>Add to bookmark</th> //add somthing -->
    }
 
   </script>
